3.0.17.2 (open)

3.0.17.1
 * <rdar://problem/42047182> (CASSANDRA-14568) Static collection deletions are corrupted in 3.0 -> 2.{1,2} messages
 * <rdar://problem/38864888> (Apple Internal) Switch to deterministic table ids to prevent duplicate cf id exceptions
 * <rdar://problem/33919865> Backport CASSANDRA-12526 Single sstable uplevel for LCS
 * <rdar://problem/41477215> (Apple Internal) Cass Tooling: migration needs to invalidate ancestors or sstables can be removed on restart
 * <rdar://problem/41486611> (Apple Internal) Fix NPE in `nodetool refresh` when no `-d` parameter passed #1141

3.0.17.0
 * <rdar://problem/36596055> Backport CASSANDRA-14197 Automatic upgrade sstables
 * <rdar://problem/39178633> Backport CASSANDRA-14397 Cass core: make it possible to more quickly interrupt compaction of a large partition
 * <rdar://problem/38923437> Backport CASSANDRA-14442: Nodetool should take list of directories to refresh
 * <rdar://problem/39912068> Backport CASSANDRA-14467: Cass: add alerting/logging if invalid tombstones are detected
 * <rdar://problem/39666510> Backport CASSANDRA-13665: `nodetool clientlist` to 3.0
 * <rdar://problem/39666602> Backport CASSANDRA-14335 List clients by protocol versions
 * <rdar://problem/33859879> Backport CASSANDRA-13993 & CASSANDRA-14447 istfiresymbol -cluster wide bounce still causing Unavailables with 2.1.18.3
 * <rdar://problem/39526066> Backport important parts from CASSANDRA-6719 and CASSANDRA-14417
 * <rdar://problem/41323998> (Apple Internal) Revert CASSANDRA-14252 from cie-cassandra
 * <rdar://problem/41267382> (Apple Internal) Fix to Christmas patch internal statement cache leak
 * <rdar://problem/40370261> (Apple Internal) RepairSuccess is being sent to repair coordinator twice (#1116)
 * <rdar://problem/39425813> (Apple Internal) Nodetool refresh violates last repair time patch